backend/k8s/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: default
  labels:
    app: zookeeper
spec:
  type: ClusterIP
  ports:
    - port: 2181
      targetPort: 2181
      name: client
  selector:
    app: zookeeper
